--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>Kafka</module>
         <module>GmallEtlProject</module>
         <module>Scala</module>
+        <module>Spark</module>
     </modules>
 
 </project>
