Hadoop Project Init

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>GmallEtlProject</module>
         <module>Scala</module>
         <module>Spark</module>
+        <module>Hadoop</module>
     </modules>
 
 </project>
