--- a/flink-gmall-realtime/pom.xml
+++ b/flink-gmall-realtime/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>flink-gmall-realtime</artifactId>
 
+    <!--版本管理-->
     <properties>
         <java.version>1.8</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
@@ -19,7 +20,9 @@
         <hadoop.version>3.1.3</hadoop.version>
     </properties>
 
+
     <dependencies>
+        <!--Flink依赖-->
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-java</artifactId>
@@ -50,6 +53,7 @@
             <version>${flink.version}</version>
         </dependency>
 
+        <!--FastJson格式化-->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
@@ -63,6 +67,7 @@
             <version>${hadoop.version}</version>
         </dependency>
 
+        <!--Lombok插件支持，需要IDEA安装Lombok Plugin-->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -86,6 +91,48 @@
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-to-slf4j</artifactId>
             <version>2.14.0</version>
+        </dependency>
+
+        <!--引入Flink CDC 的相关依赖-->
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-connector-jdbc_${scala.version}</artifactId>
+            <version>${flink.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.ververica</groupId>
+            <artifactId>flink-connector-mysql-cdc</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+
+        <!-- 如果不引入 flink-table 相关依赖，则会报错：
+        Caused by: java.lang.ClassNotFoundException:org.apache.flink.connector.base.source.reader.RecordEmitter
+        引入以下依赖可以解决这个问题（引入某些其它的 flink-table相关依赖也可）
+        -->
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-table-api-java-bridge_${scala.version}</artifactId>
+            <version>${flink.version}</version>
+        </dependency>
+
+        <!--引入phoenix依赖-->
+        <dependency>
+            <groupId>org.apache.phoenix</groupId>
+            <artifactId>phoenix-spark</artifactId>
+            <version>5.0.0-HBase-2.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.glassfish</groupId>
+                    <artifactId>javax.el</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.2.8</version>
         </dependency>
     </dependencies>
 
