--- a/flink-gmall-realtime/pom.xml
+++ b/flink-gmall-realtime/pom.xml
@@ -134,6 +134,12 @@
             <artifactId>druid</artifactId>
             <version>1.2.8</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-cep_${scala.version}</artifactId>
+            <version>${flink.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
